Fix author name not aligned with author image

--- a/challenges/blog-preview-card/app.css
+++ b/challenges/blog-preview-card/app.css
@@ -23,7 +23,7 @@ figure,
 blockquote,
 dl,
 dd {
-  margin-block-end: 0;
+  margin: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -120,7 +120,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 22rem;
+  max-width: 24rem;
 }
 
 .card-content {
@@ -132,6 +132,13 @@ body {
   border-radius: 20px;
   overflow: hidden;
   box-shadow: var(--color-grey-950) 8px 8px;
+  gap: 1.25rem;
+}
+
+.published-date,
+.course-title,
+.course-description {
+  padding-top: 0.75rem;
 }
 
 .course-image img {
